--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #242424;
+    background-color: #f2f2f2;
 
 }
 
@@ -27,13 +27,13 @@ body {
 h2 {
     text-align: center;
     margin-bottom: 20px;
-    color: #D7B26D; /* Harmonisé avec la palette */
+    color: #000000; /* Harmonisé avec la palette */
 }
 
 label {
     margin-top: 10px;
     display: block;
-    color: #D7B26D; /* Harmonisé avec la palette */
+    color: #000000; /* Harmonisé avec la palette */
 }
 
 
@@ -53,7 +53,7 @@ input[type="password"] {
 input[type="submit"] {
     width: 100%;
     padding: 10px;
-    background-color: #D7B26D;
+    background-color: #ffb834;
     color: white;
     border: none;
     border-radius: 5px;
@@ -114,10 +114,10 @@ input[type="submit"] {
     max-width: 400px;
     margin: auto;
     padding: 20px;
-    border: 1px solid #D7B26D;
-    border-radius: 10px;
-    background-color: #242424;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    border: 1px solid #ffa805;
+    border-radius: 30px;
+    background-color: #ffffff;
+    box-shadow: 0 2px 10px rgba(255, 187, 0, 0.871);
 }
 
 .register-link {
@@ -145,4 +145,3 @@ input[type="submit"] {
 .register-link2:hover {
     text-decoration: underline;
 }
-
