--- a/style.css
+++ b/style.css
@@ -14,6 +14,25 @@ body {
     background-color: #f2f2f2;
 
 }
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #121212; 
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: rgb(38, 38, 38); 
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: rgb(38, 38, 38); 
+  }
 
 .signup-container {
     background-color: white;
